syntax = "proto3";

package data_relay_grpc.blob_relay.proto;

message BlobReference {

    // the ID of the storage where the BLOB data is stored.
    uint64 storage_id = 1;

    // the ID of the object within the BLOB storage.
    uint64 object_id = 2;

    // a tag for additional access control.
    uint64 tag = 3;
}
